<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Liquid Glass Calendar</string>
    <string name="today">Today</string>
    <string name="todays_events">Today\'s Events</string>
    <string name="add_event">Add Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_language">Select Language</string>
    <string name="language">Language</string>
    <string name="enter_event_title">Enter event title</string>
    <string name="enter_event_description">Enter event description</string>
</resources>

